# deep-research

./: .gitignore  LICENSE  README.md  eval  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
eval/: __init__.py  create_a_test_dataset_agent_decision.py  create_a_test_dataset_in_langsmith.py  create_a_test_dataset_scope.py  deep_research_agent_decision_test_dataset.py  deep_research_test_dataset.py  email_test_dataset.py  evaluage_triage.py  evaluate_scope.py  prompts.py
src/: __init__.py
src/deep_research_multi_agent/: __init__.py  data_schemas.py  deep_research.py  prompts.py  research_agent.py  research_agent_mcp.py  research_agent_scope.py  research_multi_agent_supervisor.py  state_schemas_research.py  state_schemas_scope.py  utils.py
src/deep_research_multi_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/deep_research_multi_agent/tools/: __init__.py  base.py  mcp.py  reflection_tool.py  search_tools.py  supervisor_tools.py  think_tool.py
src/deep_research_multi_agent/tools/mcp-sample-files/: ai_agent_payment_systems_research_example.md
test/: test_deep_research_agent_decision_dataset.py
